--- a/BookManager/src/main/resources/application.properties
+++ b/BookManager/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.password=book
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=
 spring.mvc.static-path-pattern=/static/**
+#mybatis \u5f00\u542f\u9a7c\u5cf0\u5f0f\u547d\u540d\u6cd5
+mybatis.configuration.map-underscore-to-camel-case=true
