--- a/BookManager/src/main/resources/custom.properties
+++ b/BookManager/src/main/resources/custom.properties
@@ -1,1 +1,3 @@
 #\u81ea\u5b9a\u4e49\u8d44\u6e90\u914d\u7f6e\u4fe1\u606f
+#\u56fe\u4e66\u7167\u7247\u7684\u4e0a\u4f20\u8def\u5f84
+custom.uploadBookFileUrl=d:\\doccenter\\books_info
